--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <a class="dropdown-item" href="login.html"><i class="fas fa-sign-out-alt"></i>&nbsp;&nbsp;&nbsp;User Profile</a>
                         <a class="dropdown-item" href="login.html"><i class="fas fa-sign-out-alt"></i>&nbsp;&nbsp;&nbsp;Password Reset</a>
                         <a class="dropdown-item" href="login.html"><i class="fas fa-sign-out-alt"></i>&nbsp;&nbsp;&nbsp;Logout</a>
+                        <a class="dropdown-item" href="login.html"><i class="fas fa-sign-out-alt"></i>&nbsp;&nbsp;&nbsp;Login</a>
                     </div>
                 </li>
             </ul>
